# ChangeLog for sys-devel/gettext
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.176 2010/03/13 02:56:11 aballier Exp $

  13 Mar 2010; Alexis Ballier <aballier@gentoo.org> gettext-0.17-r1.ebuild:
  Create unversionned ld script on BSD; otherwise the loader tries (and
  fails) to load the script.

  11 Mar 2010; Markus Meier <maekke@gentoo.org> gettext-0.17-r1.ebuild:
  amd64 stable, bug #307423

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> gettext-0.17-r1.ebuild:
  Marked ppc/ppc64 stable for bug #307423.

  07 Mar 2010; Raúl Porcel <armin76@gentoo.org> gettext-0.17-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #307423

  04 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  gettext-0.17-r1.ebuild:
  stable x86, bug 307423

  02 Mar 2010; Jeroen Roovers <jer@gentoo.org> gettext-0.17-r1.ebuild:
  Stable for HPPA (bug #307423).

*gettext-0.17-r1 (05 Jan 2010)

  05 Jan 2010; Peter Volkov <pva@gentoo.org> +gettext-0.17-r1.ebuild,
  +files/gettext-0.17-x-python.patch:
  Backport upstream fix: replace a lone high surrogate with U+FFFD, bug
  #299658. Required for gajim test suite to pass.

  29 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> gettext-0.17.ebuild:
  Replace kernel-conditional dependency on sys-apps/acl with virtual/acl.

  28 Nov 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/gettext-0.17-gnuinfo.patch, gettext-0.17.ebuild:
  Fix GNU Info file, bug 249167.

  17 Oct 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  openmp USE-flag is global now

  26 Sep 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/gettext-0.17-open-args.patch, gettext-0.17.ebuild:
  Fix bug #232081, gcc-4.3 compat. Thanks to Magnus Granberg <zorry@ume.nu>.

  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
  Update metadata.xml to include USE flag descriptions. Entries taken from
  profiles/use.local.desc. GLEP 56
