@@ -10,8 +10,8 @@ AUX gettext-0.17-winnt.patch 47955 RMD160 978c14d7bce50cd8abcf15418f23d98687501f
 AUX gettext-0.17-x-python.patch 1054 RMD160 5de4646fe872d6cea8ec843fa6e2c519cde20cc7 SHA1 7b374fbd566a78265d1d930bf29d1da9782e9dc3 SHA256 d0b959a7d094f2d51fcd5a2472db5b657d5feeb7e0fdec1f33db728e2d82d38b
 DIST gettext-0.16.1.tar.gz 8539634 RMD160 0fa96b2d005e2490e8603a0a3612041086d5aea1 SHA1 8642f4346dfd6a18ecd883329e150bfe9e0886c3 SHA256 0bf850d1a079fb5a61f0a47b1a9efd35eb44032255375e1cedb0253bc27b376d
 DIST gettext-0.17.tar.gz 11640890 RMD160 36df9d4ad2848ec26729781e0d7e25b419e7d261 SHA1 c51803d9f745f6ace36bd09c0486d5735ce399cf SHA256 209638bb8e162f22c281145a34e220c66f1f6e9ff5e4c50c6f2ef2ded59537ba
-EBUILD gettext-0.16.1-r1.ebuild 4014 RMD160 68d75187c7af7159019f4a8bb348116a241faa85 SHA1 978d4c5d9319e0b3dbfd1835139acd82a37fe364 SHA256 76fa58e7225b90b8d7d525bbdcd052182a243d25f6d702cb11c295554811d5cc
-EBUILD gettext-0.17-r1.ebuild 4691 RMD160 a11e75a4f208e15d9f4c8f5e7582e5388dda4a2c SHA1 f20feeb8b968d5e2a03411b81c7e454a3dba9b1f SHA256 e58cb91c0cc5b15569671af3f4c944e190de1dbd9ff918a453f5b7b10108f46c
-EBUILD gettext-0.17.ebuild 4642 RMD160 1112a4364c9c0a6cf6e00d63cf7468fc1d76c121 SHA1 5568b4125c89f1a1158184ef0ecd75e25635908e SHA256 e8072bf3b380ac5daff662828c76dfd19b76a1b193b694d52dab120ebc7e09ec
-MISC ChangeLog 22618 RMD160 71ec4616bc2519acfad1434f92623b6a960c014f SHA1 0742eba91443a68687ac8fd042871f953b957f09 SHA256 25d46525022fddf0a61c9784f554e485836f33c8a87a8298d6fb4745b6d73eaa
+EBUILD gettext-0.16.1-r1.ebuild 4018 RMD160 7b83479242867b109327a79942cadf4774fc1f8b SHA1 5788ba239285e3b81bfcd39f62ea86e6abadc6cf SHA256 d47707c1ff4c9020a931c3044dcd8c72ff7e6b2ebdd85e2b1d2bda81c6e210c6
+EBUILD gettext-0.17-r1.ebuild 4700 RMD160 ebbd2520b7bea0ba5603fd8484ce12f383c7452d SHA1 bedd268c9abc8c642dd3d931780c422e61be162d SHA256 bea8d6d7cb5c913456cadc39359efbff7342cd3e1dae1d0c9d6102ea7c0f91d9
+EBUILD gettext-0.17.ebuild 4650 RMD160 46f39dca8df737bc2b89eb7295f26577ec455bca SHA1 3cecb1abd386b64a737b1a27c7b412b4754ce0b1 SHA256 c08a69568936bdbcdef61c373ccc73c1ff67470094c13622477e0b52d97df4b0
+MISC ChangeLog 22832 RMD160 281c373ab92c77a8858d7f6fe435a080545396b0 SHA1 34106aa537eda1f2bddbd5515f50f77a4a7eeffb SHA256 a75a2839994b435ab98eb1c0465f9cabe92afc50d45de0d6abcf898b783dd526
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
